--- a/app/views/layouts/order_administration.html.erb
+++ b/app/views/layouts/order_administration.html.erb
@@ -1,2 +1,1 @@
-<h1>StoreAdmin#order_administration</h1>
-<p>Find me in app/views/store_admin/order_administration.html.erb</p>
+<h1>Flatiron Widgets: Open Orders</h1>
